proto_library(
    name = "chrome_lang_id_proto",
    srcs = [
        "feature_extractor.proto",
        "sentence.proto",
        "task_spec.proto",
    ],
    visibility = ["//visibility:public"],
)

cc_proto_library(
    name = "chrome_lang_id_cc_proto",
    deps = [":chrome_lang_id_proto"],
)

cc_library(
    name = "cld3",
    deps = [":chrome_lang_id_cc_proto"],
    srcs = [
        "base.cc",
        "embedding_feature_extractor.cc",
        "embedding_network.cc",
        "feature_extractor.cc",
        "feature_types.cc",
        "fml_parser.cc",
        "lang_id_nn_params.cc",
        "language_identifier_features.cc",
        "language_identifier_features_test.cc",
        "language_identifier_main.cc",
        "nnet_lang_id_test.cc",
        "nnet_lang_id_test_data.cc",
        "nnet_language_identifier.cc",
        "registry.cc",
        "relevant_script_feature.cc",
        "relevant_script_feature_test.cc",
        "script_detector_test.cc",
        "sentence_features.cc",
        "task_context.cc",
        "task_context_params.cc",
        "unicodetext.cc",
        "utils.cc",
        "workspace.cc",
        "script_span/fixunicodevalue.cc",
        "script_span/generated_entities.cc",
        "script_span/generated_ulscript.cc",
        "script_span/getonescriptspan.cc",
        "script_span/getonescriptspan_test.cc",
        "script_span/offsetmap.cc",
        "script_span/text_processing.cc",
        "script_span/utf8statetable.cc",
    ],
    hdrs = [
        "base.h",
        "casts.h",
        "embedding_feature_extractor.h",
        "embedding_network.h",
        "embedding_network_params.h",
        "feature_extractor.h",
        "feature_types.h",
        "float16.h",
        "fml_parser.h",
        "lang_id_nn_params.h",
        "language_identifier_features.h",
        "nnet_lang_id_test_data.h",
        "nnet_language_identifier.h",
        "registry.h",
        "relevant_script_feature.h",
        "script_detector.h",
        "sentence_features.h",
        "simple_adder.h",
        "task_context.h",
        "task_context_params.h",
        "unicodetext.h",
        "utils.h",
        "workspace.h",
        "script_span/fixunicodevalue.h",
        "script_span/generated_ulscript.h",
        "script_span/getonescriptspan.h",
        "script_span/integral_types.h",
        "script_span/offsetmap.h",
        "script_span/port.h",
        "script_span/stringpiece.h",
        "script_span/text_processing.h",
        "script_span/utf8acceptinterchange.h",
        "script_span/utf8prop_lettermarkscriptnum.h",
        "script_span/utf8repl_lettermarklower.h",
        "script_span/utf8scannot_lettermarkspecial.h",
        "script_span/utf8statetable.h",
    ],
)
